# celery-playground

./: README.md  docker-compose.yml  global_config.py  pyproject.toml
celery-app/: Dockerfile  pyproject.toml
celery-app/src/celery_app/: __main__.py  dependency.py
celery-app/src/celery_app/repositories/: job_repository.py
celery-app/src/celery_app/routers/: __init__.py  job_router.py
celery-app/src/celery_app/schemas/: __init__.py  job.py
celery-app/src/celery_app/services/: job_service.py
celery-worker/: Dockerfile  pyproject.toml
celery-worker/src/celery_worker/: __main__.py  celery_app.py
celery-worker/src/celery_worker/tasks/: __init__.py  process_job.py
practice00/: call_tasks.py  tasks.py
practice01/: call_tasks.py  celery_config.py  tasks.py
practice02/: call_tasks.py  celery_config.py  tasks.py
practice03/: call_tasks.py  celery_config.py  tasks.py
practice04/: call_tasks.py  celery_config.py  tasks.py
practice05/: call_tasks.py  celery_config.py  tasks.py
practice06/: call_tasks.py  celery_config.py  tasks.py
