[project]
name = "celery-playground"
version = "0.1.0"
description = "Celery Playground"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5",
    "psycopg2-binary>=2.9.11",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.46",
]

[project.scripts]
p_run = "uv run python -m"
c_run = "uv run celery -A"
