[project]
name = "celery-app"
version = "0.1.0"
description = "Celery App"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "celery>=5.4.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
celery-postgres = { workspace = true }
celery-redis = { workspace = true }
celery-tasks = { workspace = true }

[tool.uv.build]
module-root = "src"

[build-system]
requires = ["uv_build>=0.5.18"]
build-backend = "uv_build"
