[project]
name = "celery-worker"
version = "0.1.0"
description = "Celery Worker"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.4.0",
]

[tool.uv.sources]
celery-postgres = { workspace = true }
celery-redis = { workspace = true }
celery-tasks = { workspace = true }

[tool.uv.build]
module-root = "src"

[build-system]
requires = ["uv_build>=0.5.18"]
build-backend = "uv_build"
